k8s/services/review-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: review-service
  namespace: webstaurator
spec:
  selector:
    app: review-service
  ports:
    - port: 8088
      targetPort: 8088
  type: ClusterIP
